--- a/Frontend/micartera-frontend/package.json
+++ b/Frontend/micartera-frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -23,6 +23,7 @@
   "private": true,
   "packageManager": "npm@11.2.0",
   "dependencies": {
+    "@angular/animations": "^21.1.0",
     "@angular/cdk": "~21.1.0",
     "@angular/common": "^21.1.0",
     "@angular/compiler": "^21.1.0",
